<resources>
    <string name="browse">Browse</string>
    <string name="collection">Care</string>
    <string name="app_name">"JiBo"</string>
    <string name="version">"JiBo Ver. 2.2"</string>
    <string name="drug">Drugs</string>
    <string name="drug_hint">\tDrugs</string>
    <string name="event">Event</string>
    <string name="research">Research</string>
    <string name="tool">Tools</string>
    <string name="news">News</string>
    <string name="calculator">Calculators</string>
    <string name="academic_profile">Profile</string>
    <string name="network">Network</string>
    <string name="survey">Survey</string>
    <string name="market">Tool Market</string>
    <string name="drugalert">Safety Alerts</string>
    <string name="loading">Loading data, please waiting...</string>
    <string name="menu">"Try Menu Button"</string>
    <string name="drug_note">Note</string>
    <string name="set_up">Setting</string>
    <string name="difference_version">专家版用户可拥有更多额外服务，目前包括美国医院处方服务（AHFS）药品数据的完整版信息，标准版用户目前只提供精简版信息。
	\n\n注：AHFS数据是由美国卫生系统药师协会 (ASHP) 编写，已有50余年历史，是最稳固可靠循证医学的药品信息来源，由世界顶级的药学专家根据临床数据编写和审核，完全独立于任何制药企业。</string>
    <string name="standard_version">Standard version is currently in use, please input the invitation code for expert version upgrade .</string>
    <string name="premium_version">Expert version is currently in use，additional service has been included.</string>
    <string name="update_version_dlg">Please input the invitation code</string>
    <string name="update_version_fail">Upgrade failure，invitation code is invalid or used</string>
    <string name="update_version_success">Upgrade successfully</string>
    <string name="set_up_version">Invatation Code</string>
    <string name="slogan1">"A daily resource for healthcare professionals"</string>
    <string name="slogan2">"with the most comprehensive, accurate and up-to-date"</string>
    <string name="slogan3">"medical information, anytime, anywhere."</string>
    <string name="checkdbversion">"Checking the data version..."</string>
    <string name="market_associate">Relevant to your specialty</string>
    <string name="market_unassociate">Other people are also using</string>
    <string name="survey_target_place">Target region</string>
    <string name="survey_target_dpt">Target department</string>
    <string name="survey_target_hospital">Target hospital level</string>
    <string name="survey_recheck_letter">This survey will require extra filter process, please take the filter question first.</string>
    <string name="survey_recheck_error">Sorry, you are not in the target scope of this survey. Thank you for your participation!</string>
    <string name="select_dialog">Search in</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="entity">Entity</string>
    <string name="publish_date">Publish Date</string>
    <string name="keyword">Keyword</string>
    <string name="str_split">"ぁ"</string>
    <string name="region">Region</string>
    <string name="Organizer">Organizer</string>
    <string name="category">Category</string>
    <string name="survey_intro_content">集博付费调查规则介绍（暂行版）\n

1.	调查相关规则\n
a)	每份调查问卷每个用户仅限回答一次，付费调查对象目前仅限具有特定资格的医师，如执业医师资格。\n
b)	如有附加筛选条件，需要在正式问卷前进行回答预筛选问卷。符合条件，可以继续。不符合条件，则无法进行该次调查。\n
c)	问卷会不定期地通过系统更新，各项问卷会依据您事先注册的资料，尽可能发送给符合调查目的的用户。\n
d)	用户可以暂时中断正式问卷的回答，在问卷有效时间内可以继续。\n
e)	完成调查后，需要进行调查后的内容验证，用户可在历史问卷页面查看问卷状态。\n
2.	用户资料相关规则\n\n
a)	目前仅供信息真实完整的用户参与调查，包括真实姓名、所在地区、城市、医院、科室、联系电话。我们会通过电话验证等多种手段，积极进行真实性的验证。\n
b)	任何相关用户信息的改变，都需要进行验证，状态将改为“未验证”，包括支付方式的改变。\n
c)	只有状态显示为“已验证”的用户，才能获得相应酬金的支付。\n
d)	用户资料和信息将完全受到保护，请参看集博的隐私和免责声明。\n
3.	付费调查酬金相关规则\n\n
a)	完成调查后，需要进行调查后的内容验证，酬金将在有效问卷验证完成后再发放。\n
b)	酬金将通过支付宝或者手机卡充值的方式进行支付。\n
4.	其他\n\n
a)	其他未尽事宜，以官方通知和解释为准。\n</string>
    <string name="survey_intro_fb">        Please feel free to contact with us for any time any feedback</string>
    <string name="generalprompt">"Notification"</string>
    <string name="chooseMenu">Choose Sharing Way</string>
    <string name="networknotavailable">Network unavailable, please connect network!</string>
    <string name="waiting">Please Wait...</string>
    <string name="updating">Checking updates, please wait...</string>
    <string name="losedownload">Internet connection is not stable, please try again later!</string>
    <string name="gbaerror">Error Notification</string>
    <string name="networktitle">Network Status Prompt</string>
    <string name="stopdownload">"Stop"</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="quitprompt">"Please choose..."</string>
    <string name="switchacc">"Change account"</string>
    <string name="exit">"Exit"</string>
    <string name="unziping">"Unzipping the data..."</string>
    <string name="downloadagain">"Downloading again"</string>
    <string name="downloading">"Downloading the latest data..."</string>
    <string name="networkNotReachable">Failure to download the data, please try it again!</string>
    <string name="selectshortcut">"Go to"</string>
    <string name="newscategory0">"The latest"</string>
    <string name="newscategory1">"Internal medicine"</string>
    <string name="newscategory2">"Surgical"</string>
    <string name="newscategory3">"Clinical specialty"</string>
    <string name="newscategory4">"Medicine"</string>
    <string name="newscategory5">"Ancillary dept.s"</string>
    <string name="newscategory6">"Healthcare news"</string>
    <string name="search_results">Search result</string>
    <string name="link_to_source">Link to the source</string>
    <string name="whole_body">Content</string>
    <string name="registration">Registration</string>
    <string name="emailhint">"Get informed"</string>
    <string name="accounthint">"Email recommended"</string>
    <string name="att2">"6+ digit/char"</string>
    <string name="departmenthint">"Add to get customized services"</string>
    <string name="filladvanceinfohint">"Add more to be an Advanced Member. We need to validate that you are a real doctor. Would you like to provide your name, and hospital or your mobile phone number?"</string>
    <string name="note">"Notice"</string>
    <string name="directreg">"Quick Register"</string>
    <string name="advancereg">"Detailed Info"</string>
    <string name="practiceinfo">"Practice Info"</string>
    <string name="modify">"Edit"</string>
    <string name="editsuccess">"Successfull!"</string>
    <string name="userinfo">"User info"</string>
    <string name="account">"Account"</string>
    <string name="password2">"Password"</string>
    <string name="oldpassword">"Current password"</string>
    <string name="confirmnewpassword">"Confirm password"</string>
    <string name="retrypassword">"Confirm"</string>
    <string name="e_mail">Email</string>
    <string name="departments">Dept</string>
    <string name="send">"Submit"</string>
    <string name="sending">"Submitting..."</string>
    <string name="empty">" is empty"</string>
    <string name="username">"UserName"</string>
    <string name="password">"Password"</string>
    <string name="update_info_success">"Update Information Success"</string>
    <string name="passwordlen">"The length of PWD should be no less than 6 characters"</string>
    <string name="verifypasserror">"Password is not right, try again!"</string>
    <string name="newpassnot">"New password is inconsistent, try again!"</string>
    <string name="passwordnot">"The PWD does not match!"</string>
    <string name="regerror">"The user name has been taken, please Change another one."</string>
    <string name="netexception">"Internet connection error"</string>
    <string name="regerror_failed">"Failed to sign up your account due to the internet connection, please try it again later, or sign  up at www.jibo.cn"</string>
    <string name="regprompt">"Your account has been created, please check your emailbox and verify email address to get more services."</string>
    <string name="username1">"Account"</string>
    <string name="password1">"Password"</string>
    <string name="rememberpass">"Keep PWD"</string>
    <string name="autologin">"Keep Login"</string>
    <string name="login">"Log in"</string>
    <string name="registration1">"Sign Up"</string>
    <string name="relief">"Please read "</string>
    <string name="relief_content">the disclaimer</string>
    <string name="autologining">Automatically login</string>
    <string name="logining">"Logging in..."</string>
    <string name="errortint">Error hint</string>
    <string name="nolicense">"We can't find your licensecurrently!"</string>
    <string name="preting">"Incorrect password, please try again!"</string>
    <string name="accountrule">Inappropriate characters in your username</string>
    <string name="city">City</string>
    <string name="star">"<font color="red">*</font>"</string>
    <string name="number">Phone</string>
    <string name="reg_name">Name</string>
    <string name="regdepartment">Dept</string>
    <string name="proftitle">"Prof. Title"</string>
    <string name="att1">"Item with * is mandatory"</string>
    <string name="prof_titles0">"Prof. Title"</string>
    <string name="prof_titles1">"Interns"</string>
    <string name="prof_titles2">"Residency"</string>
    <string name="prof_titles3">"Physician"</string>
    <string name="prof_titles4">"Deputy Chief Physician"</string>
    <string name="prof_titles5">"Chief Physician"</string>
    <string name="prof_title">Prof. title</string>
    <string name="name">Name</string>
    <string name="fillschoolname">"School name:"</string>
    <string name="license_number">License #</string>
    <string name="date_of_birth">Birthday</string>
    <string name="subcategory">Sub-specialty</string>
    <string name="medical_school">"Medical school "</string>
    <string name="information">Information</string>
    <string name="year_of_graduation">Year of Graduation</string>
    <string name="reg2_region">Region</string>
    <string name="reg2_city">City</string>
    <string name="reg2_specialty">Specialty</string>
    <string name="reg2_medical_school">Hospital</string>
    <string name="licensehint">"In 15 digital NO."</string>
    <string name="other">"other"</string>
    <string name="gradyear">"1998"</string>
    <string name="must_be_15">Must be 15 number</string>
    <string name="year">Year</string>
    <string name="checkUsername">Checking the username</string>
    <string name="news_turnto_drug_alert">Safety Alert</string>
    <string name="share_dialog_title_sina">Share to SinaWeibo</string>
    <string name="share_dialog_title_qq">Share to QQWeibo</string>
    <string name="shareitem0">"Message Sharing"</string>
    <string name="shareitem1">"Sina Sharing"</string>
    <string name="nccn_disease">Clinical Practicing Guidelines</string>
    <string name="ecg">ECG for CVDs</string>
    <string name="tnm">TNM tumor staging</string>
    <string name="ok_yes">Sure</string>
    <string name="hospital_hint">Type in your hospital name</string>
    <string name="popular">Popular</string>
    <string name="specialtys">Specialty</string>
    <string name="favorites">Favorites</string>
    <string name="tip_version_new_version_feature">新版本特性</string>
    <string name="tip_version_para1">1. The latest from PubMed and Wanfang in Research</string>
    <string name="tip_version_para2">2. Validation process for real doctors</string>
    <string name="tip_version_para3">3. Overall controller for Push Notification</string>
    <string name="tip_version_para4">4. More options for non-doctors in registration</string>
    <string name="tip_version_button">开启提示系统</string>
    <string name="select_picture">From your album</string>
    <string name="camera_picture">Camera</string>
    <string name="clear">clear</string>
	<string name="interactions_notice_first">Check a group of drugs to see if there are any unsafe interactions.</string>
    <string name="add_drug">Add drug</string>
</resources>