<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/popular"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@null"
        android:text="@string/popular"
        android:textSize="16sp" />

    <Button
        android:id="@+id/specialtys"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@null"
        android:text="@string/specialtys"
        android:textSize="16sp" />

    <Button
        android:id="@+id/favorites"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@null"
        android:text="@string/favorites"
        android:textSize="16sp" />

</LinearLayout>