<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pop_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:background="@drawable/pop_license_takephoto"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical" >

            
            
            
            <Button
                android:id="@+id/select_picture"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn_bg"
                android:text="@string/select_picture"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/camera"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/login_btn_bg"
                android:layout_marginTop="5dip"
                android:text="@string/camera_picture"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/login_btn_bg"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>