<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/light_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/header_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/header1" >

        <TextView
            android:id="@+id/txt_header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/drug"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submit"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:text="@string/ok_yes"
            android:textSize="18sp"
            android:textColor="#ffffff"
            android:background="@drawable/survey_payment_btn"
             />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/reg_input_panel"
        android:gravity="center_vertical"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" >

        <EditText
            android:id="@+id/edt_hospital_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:hint="@string/hospital_hint"
            android:background="@drawable/reg_input_bg"
            android:drawableLeft="@drawable/magnifier" >
        </EditText>
    </RelativeLayout>

    <ListView
        android:id="@+id/lv_hs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000"
        android:divider="@drawable/cutting_line"
        android:listSelector="@drawable/gba_list_item" >
    </ListView>

</LinearLayout>