<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:id="@+id/head_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imgbtn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:src="@drawable/home_action"
            android:visibility="invisible" >
        </ImageButton>
        <TextView
            android:id="@+id/search_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/search_input_bg"
            android:hint="@string/add_drug"
            android:paddingLeft="35dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/imgbtn_home" 
            android:layout_toLeftOf="@+id/imgbtn_clear"
            android:layout_marginTop="13dp"/>

        <Button
            android:id="@id/imgbtn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/survey_payment_btn"
            android:text="@string/clear"
            android:textColor="#ffffff"
            android:layout_marginRight="10dp"
            android:textSize="18sp" 
            android:layout_alignParentRight="true"
            android:layout_alignBaseline="@id/imgbtn_home"
            android:layout_marginTop="13dp"
             android:visibility="invisible"/>
        <TextView 
        android:id="@+id/indication_notice_text"
        android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
		android:textColor="#41687d"
		android:textSize="18sp"
		android:text="@string/interactions_notice_first"
	    android:background="@drawable/b02" 
	    android:layout_below="@id/search_edit"
	    android:layout_alignRight="@id/search_edit"
	    android:layout_alignLeft="@id/search_edit"  />
    </RelativeLayout>

</RelativeLayout>